# sarsa-2d

./: .gitignore  .gitmodules  CMakeLists.txt  Game.cpp  Game.h  Main.cpp  README.md  TG-Engine-2D.cpp  TG-Engine-2D.h  TG-Engine-2D.sln  TG-Engine-2D.vcxproj  TG-Engine-2D.vcxproj.filters  cmake-build-vs2022.bat
assets/scripts/: Level2.lua
resources/: level-01.map
src/: Game.cpp  Main.cpp  TG-Engine-2D.cpp
src/AssetStore/: AssetBrowser.h  AssetStore.cpp  AssetStore.h
src/Components/: ._ScriptComponent.h  AnimationComponent.h  BoxColliderComponent.h  DirectionComponent.h  ProjectileComponent.h  ProjectileEmitterComponent.h  SpriteComponent.h  TextLabelComponent.h
src/ECS/: ECS.cpp  ECS.h
src/Editor/: EditorDemo.cpp
src/EventBus/: EventBus.h
src/Events/: KeyPressedEvent.h
src/Game/: ._Game.cpp  Game.cpp  Game.h  LevelLoader.cpp  LevelLoader.h
src/Systems/: ._RenderSystem.h  ._ScriptSystem.h  AnimationSystem.h  CameraMovementSystem.h  CollisionSystem.h  DamageSystem.h  KeyboardControlSystem.h  MovementSystem.h  ProjectileEmitSystem.h  RenderColliderSystem.h  RenderGUISystem.h  RenderHealthBarSystem.h  RenderSystem.h  RenderTextSystem.h  ScriptSystem.h
